--- a/css/styles.css
+++ b/css/styles.css
@@ -164,10 +164,6 @@ filter:alpha(opacity=100);
 -ms-transform:translatey(0);
 -webkit-transform:translatey(0);
 transform:translatey(0);
-}
-
-.hovereffect:hover a.info {
--webkit-transition-delay:.2s;
 transition-delay:.2s;
 }
 
@@ -184,7 +180,7 @@ transition-delay:.2s;
     background-color: #ffffff;
     text-decoration: none;
     display: block;
-    width: 14%;
+    width: 170px;
     height: 100%;
     top: 0;
     transition: all .5s ease;
@@ -216,3 +212,17 @@ transition-delay:.2s;
     transition:all .4s ease-in-out   
 }
 
+/*Social icons after hover*/
+
+a.fa-facebook-f:hover:before {
+    color:#3b5999;
+}
+a.fa-instagram:hover:before {
+    color:#e4405f;
+}
+a.fa-pinterest:hover:before {
+    color:#bd081c;
+}
+a.fa-github:hover:before {
+    color:#000000;
+}
