--- a/Cia gyvena laime/css/styles.css
+++ b/Cia gyvena laime/css/styles.css
@@ -20,8 +20,8 @@
     right: 0px;
     height: 60px;
     padding: 20px;
-  
 }
+
 .header_search {
     visibility: hidden; 
     opacity: 0;
@@ -43,6 +43,8 @@
     border: none;
     width: 100%;
     outline: none;
+    font-family: Calibri,Candara,Segoe,Segoe UI,Optima,Arial,bold,sans-serif; 
+    font-size: 18px;
 }
 
 .header_search_visible {
@@ -97,6 +99,7 @@ img {
     color: black;
     font-size: 18px;
     margin-left: 30px;
+    margin-top: 40px;
 }
 
 
@@ -203,6 +206,12 @@ transition-delay:.2s;
     visibility: visible; 
     opacity: 1;
 }
+a.list_item:hover {
+    color:#000000;
+}
+a.fa-times:hover {
+    color:#000000;
+}
 
 /*END navigation */
 
@@ -212,7 +221,7 @@ transition-delay:.2s;
     transition:all .4s ease-in-out   
 }
 
-/*Social icons after hover*/
+/*START Social icons after hover*/
 
 a.fa-facebook-f:hover:before {
     color:#3b5999;
@@ -225,4 +234,33 @@ a.fa-pinterest:hover:before {
 }
 a.fa-github:hover:before {
     color:#000000;
+}
+
+/*END Social icons after hover*/
+
+/*START loading bar*/
+
+#loading-progress{
+    width: 100%;
+    background-color: #ffffff;
+    position: fixed;
+    
+}
+
+#bar{
+    width: 1%;
+    height: 10px;
+    background-color: #000000;
+    top: 60px;
+    left: 0px;
+    right: 0px;
+}
+/*END loading bar*/
+
+.entry-photo {
+    padding: 20px;
+    background-color: #f5f5f0;
+}
+.bread_description {
+    text-align: center;
 }
