--- a/Cia_gyvena_laime/Kontaktine_forma/css/style.css
+++ b/Cia_gyvena_laime/Kontaktine_forma/css/style.css
@@ -1,9 +1,50 @@
 
-.container-fluid {
-    margin-top: 60px;
-    position: absolute;
-    z-index: -1;
+.container {
+	max-width:400px;
+	width:100%;
+	margin:0 auto;
+	position:relative;
+    padding: 40px;
 }
+
+#contact {
+	background:#FFFFFF;
+	padding:25px;
+	margin:20px 0;
+    font-family: Calibri,Candara,Segoe,Segoe UI,Optima,Arial,bold,sans-serif;
+    text-transform: uppercase;
+    font-size: 15px;
+    letter-spacing: 0.5em;
+    text-align: center;
+}
+
+#contact input[type="text"], #contact input[type="email"], #contact textarea { 
+    font:400 12px/16px Calibri,Candara,Segoe,Segoe UI,Optima,Arial,bold,sans-serif; 
+	width:100%;
+	border: none;
+    outline: none;
+	background:#FFFFFF;
+	margin:0 0 15px;
+	padding:10px;
+}
+
+#contact button[type="submit"] {
+    font:400 12px/16px Calibri,Candara,Segoe,Segoe UI,Optima,Arial,bold,sans-serif; 
+	width:100%;
+	border: 1px solid #AAA;
+	background:#FFFFFF;
+	margin:0 0 5px;
+	padding:10px;
+}
+
+#contact button[type="submit"]:hover {
+	-webkit-transition:border-color 0.3s ease-in-out;
+	-moz-transition:border-color 0.3s ease-in-out;
+	transition:border-color 0.3s ease-in-out;
+	border:1px solid black;
+    
+}
+
 .fas {
   color: #000000;
     cursor: pointer;
@@ -20,8 +61,8 @@
     right: 0px;
     height: 60px;
     padding: 20px;
+  
 }
-
 .header_search {
     visibility: hidden; 
     opacity: 0;
@@ -61,22 +102,8 @@
   font-weight: bold;
   letter-spacing: 0.5em;
   color: #000000;
-  text-decoration: under-line;
-  
-  
-  /*@media (max-width: 800px) {
-      flex-direction: column;
-}*/
-    
+ 
 }
-.no-gutters {
-  margin-right: 0;
-  margin-left: 0;
-}
-
-img {
-  width: 100%;
-  }
 
 #footer {
     position: absolute;
@@ -86,7 +113,7 @@ img {
     background-color: #ffffff;
     left: 0;
     right: 0;
-    height: 120px;
+    height: 0px;
     padding: 20px;
   
 }
@@ -101,78 +128,6 @@ img {
     margin-left: 30px;
     margin-top: 40px;
 }
-
-
-/*START hover effect*/
-
-.hovereffect {
-width:100%;
-height:100%;
-overflow:hidden;
-position:relative;
-text-align:center;
-cursor:default;
-}
-
-.hovereffect .overlay {
-width:100%;
-height:100%;
-position:absolute;
-overflow:hidden;
-top:0;
-left:0;
-opacity:0;
-background-color:rgba(0,0,0,0.5);
--webkit-transition:all .4s ease-in-out;
-transition:all .4s ease-in-out
-}
-
-.hovereffect img {
-display:block;
-position:relative;
--webkit-transition:all .4s linear;
-transition:all .4s linear;
-}
-
-.hovereffect a.info {
-text-decoration:none;
-display:inline-block;
-text-transform:uppercase;
-color:#fff;
-border: 2px solid #fff;
-background-color:transparent;
-opacity:0;
-overflow:auto;
-filter:alpha(opacity=0);
--webkit-transition:all .2s ease-in-out;
-transition:all .2s ease-in-out;
-margin:100px 0 0;
-padding:14px 14px;
-}
-
-.hovereffect:hover img {
--ms-transform:scale(1.2);
--webkit-transform:scale(1.2);
-transform:scale(1.2);
-}
-
-.hovereffect:hover .overlay {
-opacity:1;
-filter:alpha(opacity=100);
-}
-
-.hovereffect:hover a.info {
-opacity:1;
-filter:alpha(opacity=100);
--ms-transform:translatey(0);
--webkit-transform:translatey(0);
-transform:translatey(0);
-transition-delay:.2s;
-}
-
-/*END hover effect*/
-
-/*START navigation */
 
 .navigation {
     visibility: hidden; 
@@ -221,7 +176,7 @@ a.fa-times:hover {
     transition:all .4s ease-in-out   
 }
 
-/*START Social icons after hover*/
+/*Social icons after hover*/
 
 a.fa-facebook-f:hover:before {
     color:#3b5999;
@@ -236,31 +191,10 @@ a.fa-github:hover:before {
     color:#000000;
 }
 
-/*END Social icons after hover*/
+/*START Kontaktinė forma*/
 
-/*START loading bar*/
 
-#loading-progress{
-    width: 100%;
-    background-color: #ffffff;
-    position: fixed;
-    
-}
+/*END Kontaktinė forma*/
 
-#bar{
-    width: 1%;
-    height: 10px;
-    background-color: #000000;
-    top: 60px;
-    left: 0px;
-    right: 0px;
-}
-/*END loading bar*/
 
-.entry-photo {
-    padding: 20px;
-    background-color: #f5f5f0;
-}
-.bread_description {
-    text-align: center;
-}
+
