--- a/Cia_gyvena_laime/css/styles.css
+++ b/Cia_gyvena_laime/css/styles.css
@@ -1,5 +1,5 @@
 .container-fluid {
-	margin-top: 60px;
+	margin-top: 0px;
 	position: absolute;
 	z-index: -1;
 }
@@ -26,8 +26,7 @@
 	justify-content: space-between;
 	background-color: #ffffff;
 	top: 0px;
-	left: 0px;
-	right: 0px;
+	width: 100%;
 	height: 60px;
 	padding: 20px;
 }
@@ -35,7 +34,7 @@
 .header_search {
 	visibility: hidden;
 	opacity: 0;
-	position: fixed;
+	position: relative;
 	text-align: center;
 	display: flex;
 	justify-content: space-between;
@@ -43,7 +42,7 @@
 	text-decoration: none;
 	height: 60px;
 	top: 0px;
-	left: 0px;
+	width: 100%;
 	right: 0px;
 	padding: 20px;
 	transition: all .5s ease;
