--- a/Cia_gyvena_laime/css/styles.css
+++ b/Cia_gyvena_laime/css/styles.css
@@ -1,6 +1,6 @@
 .container-fluid {
 	margin-top: 0px;
-	position: absolute;
+	position: absolute; 
 	z-index: -1;
 }
 
@@ -8,17 +8,17 @@
 	color: #000000;
 	cursor: pointer;
 }
+
 .fa-bars {
     left: 0;
     position: relative;
-    width: 15px;
 }
 
 .fa-search {
     right: 0;
     position: relative;
-    width: 15px;
 }
+
 #header {
 	position: fixed;
 	text-align: center;
@@ -29,6 +29,20 @@
 	width: 100%;
 	height: 60px;
 	padding: 20px;
+}
+
+#header-contact-form {
+    position: fixed;
+	text-align: center;
+	display: flex;
+	justify-content: space-between;
+	background-color: #ffffff;
+	top: 0px;
+	width: 100%;
+	height: 60px;
+	padding: 20px;
+    border-bottom: 2px solid black;
+    
 }
 
 .header_search {
@@ -264,7 +278,7 @@ a.fa-github:hover:before {
 	width:100%;
 	margin:0 auto;
 	position:relative;
-    padding: 40px;
+    padding: 10px;
 }
 
 #contact {
@@ -306,3 +320,22 @@ a.fa-github:hover:before {
 }
 
 /*END kontaktinė forma */
+
+/*START kategorijos*/
+#category-name {
+	text-align: center;
+	display: flex;
+	justify-content:center;
+    padding: 10px;
+    font-size: 15px;
+    font-family: Calibri, Candara, Segoe, Segoe UI, Optima, Arial, bold, sans-serif;
+    font-weight: bold;
+    letter-spacing: 0.5em;
+    color: #000000;
+    border-top: 1px solid black;
+    width: 100%;
+    height: 60px;
+    position: relative;
+}
+
+/*END kategorijos*/
