--- a/Cia_gyvena_laime/css/styles.css
+++ b/Cia_gyvena_laime/css/styles.css
@@ -31,7 +31,7 @@
 	padding: 20px;
 }
 
-#header-contact-form {
+/*#header-contact-form {
     position: fixed;
 	text-align: center;
 	display: flex;
@@ -41,7 +41,7 @@
 	width: 100%;
 	height: 60px;
 	padding: 20px;
-    border-bottom: 2px solid black;
+    border-bottom: 2px solid black;*/
     
 }
 
@@ -339,3 +339,17 @@ a.fa-github:hover:before {
 }
 
 /*END kategorijos*/
+
+/*START loading bar */
+
+#myProgress {
+  width: 100%;
+  background-color: #ffffff;
+}
+
+#myBar {
+  width: 1%;
+  height: 9px;
+  background-color: #000000;
+}
+/*END loading bar */
