--- a/Cia_gyvena_laime/css/styles.css
+++ b/Cia_gyvena_laime/css/styles.css
@@ -1,6 +1,6 @@
 .container-fluid {
 	margin-top: 0px;
-	position: absolute; 
+	position: absolute;
 	z-index: -1;
 }
 
@@ -10,13 +10,13 @@
 }
 
 .fa-bars {
-    left: 0;
-    position: relative;
+	left: 0;
+	position: relative;
 }
 
 .fa-search {
-    right: 0;
-    position: relative;
+	right: 0;
+	position: relative;
 }
 
 #header {
@@ -41,9 +41,9 @@
 	width: 100%;
 	height: 60px;
 	padding: 20px;
-    border-bottom: 2px solid black;*/
+    border-bottom: 2px solid black;
     
-}
+}*/
 
 .header_search {
 	visibility: hidden;
@@ -76,20 +76,20 @@
 }
 
 #logo {
-    text-transform: uppercase;
-    left: 50%;
-    font-size: 18px;
-    font-family: Calibri, Candara, Segoe, Segoe UI, Optima, Arial, bold, sans-serif;
-    font-weight: bold;
-    letter-spacing: 0.5em;
-    color: #000000;
-    text-decoration: under-line;
+	text-transform: uppercase;
+	left: 50%;
+	font-size: 18px;
+	font-family: Calibri, Candara, Segoe, Segoe UI, Optima, Arial, bold, sans-serif;
+	font-weight: bold;
+	letter-spacing: 0.5em;
+	color: #000000;
+	text-decoration: underline black;
 }
 
 @media screen and (max-width: 375px) {
-    #logo {
-    font-size: 15px;  
-    }
+	#logo {
+		font-size: 15px;
+	}
 }
 
 .no-gutters {
@@ -222,7 +222,7 @@ img {
 	color: black;
 	font-family: Calibri, Candara, Segoe, Segoe UI, Optima, Arial, bold, sans-serif;
 	font-weight: bold;
-    cursor: pointer;
+	cursor: pointer;
 }
 
 .nav_visible {
@@ -273,69 +273,69 @@ a.fa-github:hover:before {
 }
 
 /*START kontaktinė forma */
+
 .container {
-	max-width:400px;
-	width:100%;
-	margin:0 auto;
-	position:relative;
-    padding: 10px;
+	max-width: 400px;
+	width: 100%;
+	margin: 0 auto;
+	position: relative;
+	padding: 10px;
 }
 
 #contact {
-	background:#FFFFFF;
-	padding:25px;
-	margin:20px 0;
-    font-family: Calibri,Candara,Segoe,Segoe UI,Optima,Arial,bold,sans-serif;
-    text-transform: uppercase;
-    font-size: 15px;
-    letter-spacing: 0.5em;
-    text-align: center;
+	background: #FFFFFF;
+	padding: 25px;
+	margin: 20px 0;
+	font-family: Calibri, Candara, Segoe, Segoe UI, Optima, Arial, bold, sans-serif;
+	text-transform: uppercase;
+	font-size: 15px;
+	letter-spacing: 0.5em;
+	text-align: center;
 }
 
-#contact input[type="text"], #contact input[type="email"], #contact textarea { 
-    font:400 12px/16px Calibri,Candara,Segoe,Segoe UI,Optima,Arial,bold,sans-serif; 
-	width:100%;
+#contact input[type="text"], #contact input[type="email"], #contact textarea {
+	font: 400 12px/16px Calibri, Candara, Segoe, Segoe UI, Optima, Arial, bold, sans-serif;
+	width: 100%;
 	border: none;
-    outline: none;
-	background:#FFFFFF;
-	margin:0 0 15px;
-	padding:10px;
+	outline: none;
+	background: #FFFFFF;
+	margin: 0 0 15px;
+	padding: 10px;
 }
 
 #contact button[type="submit"] {
-    font:400 12px/16px Calibri,Candara,Segoe,Segoe UI,Optima,Arial,bold,sans-serif; 
-	width:100%;
+	font: 400 12px/16px Calibri, Candara, Segoe, Segoe UI, Optima, Arial, bold, sans-serif;
+	width: 100%;
 	border: 1px solid #AAA;
-	background:#FFFFFF;
-	margin:0 0 5px;
-	padding:10px;
+	background: #FFFFFF;
+	margin: 0 0 5px;
+	padding: 10px;
 }
 
 #contact button[type="submit"]:hover {
-	-webkit-transition:border-color 0.3s ease-in-out;
-	-moz-transition:border-color 0.3s ease-in-out;
-	transition:border-color 0.3s ease-in-out;
-	border:1px solid black;
-    
+	-webkit-transition: border-color 0.3s ease-in-out;
+	-moz-transition: border-color 0.3s ease-in-out;
+	transition: border-color 0.3s ease-in-out;
+	border: 1px solid black;
 }
 
 /*END kontaktinė forma */
 
 /*START kategorijos*/
+
 #category-name {
 	text-align: center;
 	display: flex;
-	justify-content:center;
-    padding: 10px;
-    font-size: 15px;
-    font-family: Calibri, Candara, Segoe, Segoe UI, Optima, Arial, bold, sans-serif;
-    font-weight: bold;
-    letter-spacing: 0.5em;
-    color: #000000;
-    border-top: 1px solid black;
-    width: 100%;
-    height: 60px;
-    position: relative;
+	justify-content: center;
+	padding: 10px;
+	font-size: 15px;
+	font-family: Calibri, Candara, Segoe, Segoe UI, Optima, Arial, bold, sans-serif;
+	font-weight: bold;
+	letter-spacing: 0.5em;
+	color: #000000;
+	width: 100%;
+	height: 60px;
+	position: relative;
 }
 
 /*END kategorijos*/
@@ -343,13 +343,14 @@ a.fa-github:hover:before {
 /*START loading bar */
 
 #myProgress {
-  width: 100%;
-  background-color: #ffffff;
+	width: 100%;
+	background-color: #ffffff;
 }
 
 #myBar {
-  width: 1%;
-  height: 9px;
-  background-color: #000000;
+	width: 1%;
+	height: 2px;
+	background-color: #000000;
 }
+
 /*END loading bar */
