--- a/Cia_gyvena_laime/css/styles.css
+++ b/Cia_gyvena_laime/css/styles.css
@@ -1,8 +1,34 @@
+/*START body stilius*/
 .container-fluid {
 	margin-top: 0px;
 	position: absolute;
 	z-index: -1;
 }
+
+.no-gutters {
+	margin-right: 0;
+	margin-left: 0;
+}
+
+.body_nav_visible {
+	opacity: 0.5;
+	-webkit-transition: all .4s ease-in-out;
+	transition: all .4s ease-in-out
+}
+
+img {
+	width: 100%;
+}
+
+.entry-photo {
+	padding: 20px;
+	background-color: #f5f5f0;
+	height: 100%;
+}
+
+/*END body stilius*/
+
+/*START Font-awesome ikonos */
 
 .fas {
 	color: #000000;
@@ -19,6 +45,21 @@
 	position: relative;
 }
 
+.fab {
+	padding: 5px;
+	width: 30px;
+	text-decoration: none;
+	text-align: center;
+	color: black;
+	font-size: 18px;
+	margin-left: 30px;
+	margin-top: 40px;
+}
+
+/*END Font-awesome ikonos */
+
+/*START header stilius*/
+
 #header {
 	position: fixed;
 	text-align: center;
@@ -30,20 +71,6 @@
 	height: 60px;
 	padding: 20px;
 }
-
-/*#header-contact-form {
-    position: fixed;
-	text-align: center;
-	display: flex;
-	justify-content: space-between;
-	background-color: #ffffff;
-	top: 0px;
-	width: 100%;
-	height: 60px;
-	padding: 20px;
-    border-bottom: 2px solid black;
-    
-}*/
 
 .header_search {
 	visibility: hidden;
@@ -92,14 +119,9 @@
 	}
 }
 
-.no-gutters {
-	margin-right: 0;
-	margin-left: 0;
-}
+/*END header stilius*/
 
-img {
-	width: 100%;
-}
+/*START footer stilius*/
 
 #footer {
 	position: absolute;
@@ -113,16 +135,7 @@ img {
 	padding: 20px;
 }
 
-.fab {
-	padding: 5px;
-	width: 30px;
-	text-decoration: none;
-	text-align: center;
-	color: black;
-	font-size: 18px;
-	margin-left: 30px;
-	margin-top: 40px;
-}
+/*END footer stilius*/
 
 /*START hover effect*/
 
@@ -222,7 +235,7 @@ img {
 	color: black;
 	font-family: Calibri, Candara, Segoe, Segoe UI, Optima, Arial, bold, sans-serif;
 	font-weight: bold;
-	cursor: pointer;
+	/*cursor: pointer;*/
 }
 
 .nav_visible {
@@ -239,12 +252,6 @@ a.fa-times:hover {
 }
 
 /*END navigation */
-
-.body_nav_visible {
-	opacity: 0.5;
-	-webkit-transition: all .4s ease-in-out;
-	transition: all .4s ease-in-out
-}
 
 /*START Social icons after hover*/
 
@@ -265,12 +272,6 @@ a.fa-github:hover:before {
 }
 
 /*END Social icons after hover*/
-
-.entry-photo {
-	padding: 20px;
-	background-color: #f5f5f0;
-	height: 100%;
-}
 
 /*START kontaktinė forma */
 
